# ObjetosTexturizados

./: CMakeLists.txt  README.md
common/: glad.c
include/: Sprite.h
include/glad/: glad.h
shaders/: shader.frag  shader.vert
src/: Sprite.cpp  main.cpp
